HELIO-4163 - css fixes

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -701,7 +701,7 @@ footer.press {
 
     .meta-label, .isbns, .subject-series {
       font-weight: bold;
-        ul {
+        ul li {
           font-weight: unset;
         }
     }
