HELIO-4249 Increase fixity failure tolerance

--- a/app/views/fixity_mailer/send_failures.html.erb
+++ b/app/views/fixity_mailer/send_failures.html.erb
@@ -24,6 +24,6 @@
     <% end %>
     </table>
     <p />
-    <p><a href="https://tools.lib.umich.edu/confluence/display/FUL/How+to+Address+Fixity+Failures">Please read the confluence fixity page for steps on how to handle this.</a></p>
+    <p><a href="https://mlit.atlassian.net/wiki/spaces/FUL/pages/9332195632/How+to+Address+Fixity+Failures">Please read the confluence fixity page for steps on how to handle this.</a></p>
   </body>
 </html>
