--- a/app/assets/stylesheets/application/themes.scss
+++ b/app/assets/stylesheets/application/themes.scss
@@ -4722,7 +4722,7 @@ $gabii-link-hover:    #1e5667;
   }
 
   #maincontent {
-    font-size: 18px;
+    font-size: initial;
   }
 
   // monograph catalog
