--- a/app/views/counter_reports/unauthorized.html.erb
+++ b/app/views/counter_reports/unauthorized.html.erb
@@ -1,11 +1,4 @@
-<h1>Unidentified Institution</h1>
-<div class="alert alert-info alert-dismissible banner container" role="alert" style="display: none;">
-  <p class="message">To view statistics for your institution, please access this page from within your campus IP ranges, 
-    through your proxy server, or perhaps by <a href="https://fulcrum.org/login">logging in</a> to your campus identity service.</p>
-  <p>If you've done so and still see this message, your institution does not have access to any collections on <a href="https://www.fulcrum.org">Fulcrum</a>.
-    For information on gaining access:</p>
-  <ul>
-    <li><a href="https://www.press.umich.edu/librarians">University of Michigan Press Ebook Collection</a></li>
-    <li><a href="https://www.humanitiesebook.org/subscriptions/">ACLS Humanities E-Book</a></li>
-  </ul>
-</div>
+<h1>COUNTER Reports Dashboard</h1>
+<p>The COUNTER reports dashboard requires no login; it uses IP authentication to identify the requesting institution.<br />You may need to alter the URL to a proxied URL in order to be IP-authenticated to the reporting system.</p>
+
+<p>For more information about COUNTER reports, <a href="https://mpub.atlassian.net/wiki/spaces/FPS/pages/117244158/UMP+EBC+Usage+Statistics+FAQ" target="_blank">please visit our FAQ</a>.</p>
