--- a/app/views/layouts/hyrax.html.erb
+++ b/app/views/layouts/hyrax.html.erb
@@ -20,8 +20,8 @@
     <% else %>
       <%= render 'shared/brand_press_footer' %>
     <% end %>
-  <% else %>
-    <%= render 'shared/footer' %>
+  <% elsif @skip_footer.blank? %>
+    <%= render 'shared/footer'  %>
   <% end %>
 
 <% end %>
